@@ -19,7 +19,7 @@ MANDIR ?= $(PREFIX)/share/man
 INCLUDEDIR ?= $(PREFIX)/include
 MODULEDIR ?= $(LIBDIR)/kdns_modules
 ETCDIR ?= $(PREFIX)/etc/kresd
-ROOTHINTS ?= $(ETCDIR)/hints.zone
+ROOTHINTS ?= $(ETCDIR)/root.hints
 
 # Tools
 CC      ?= cc
