@@ -31,6 +31,7 @@ LUA_HAS_SETFUNCS := \
 kresd_CFLAGS := -fPIE \
 		-Dlibknot_SONAME=\"$(libknot_SONAME)\" \
 		-Dlibzscanner_SONAME=\"$(libzscanner_SONAME)\" \
+		-DROOTHINTS=\"$(ROOTHINTS)\" \
 		-DLUA_HAS_SETFUNCS="$(LUA_HAS_SETFUNCS)"
 kresd_DEPEND := $(libkres) $(contrib)
 kresd_LIBS := $(libkres_TARGET) $(contrib_TARGET) $(libknot_LIBS) \
@@ -59,7 +60,7 @@ ifneq ($(SED),)
 endif
 daemon-clean: kresd-clean
 	@$(RM) daemon/lua/*.inc daemon/lua/kres.lua daemon/lua/trust_anchors.lua \
-		daemon/lua/zonefile.lua daemon/lua/config.lua
+		daemon/lua/zonefile.lua
 
 KNOT_RRSET_TXT_DUMP := \
 	$(shell pkg-config libknot --atleast-version=2.4.0 && echo true || echo false)
@@ -68,9 +69,6 @@ daemon/lua/kres.lua: daemon/lua/kres.lua.in
 
 daemon/lua/trust_anchors.lua: daemon/lua/trust_anchors.lua.in
 	@$(call quiet,SED,$<) -e "s|@ETCDIR@|$(ETCDIR)|g" $< > $@
-
-daemon/lua/config.lua: daemon/lua/config.lua.in
-	@$(call quiet,SED,$<) -e "s|@ROOTHINTS@|$(ROOTHINTS)|g" $< > $@
 
 LIBZSCANNER_COMMENTS := \
 	$(shell pkg-config libzscanner --atleast-version=2.4.2 && echo true || echo false)
